--- a/SFJ/app/src/main/res/layout/fragment_control.xml
+++ b/SFJ/app/src/main/res/layout/fragment_control.xml
@@ -13,8 +13,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:text="请选择程序控制施肥机"
-            android:textColor="@color/black"
-            android:textSize="22sp" />
+            android:textColor="@color/black" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -34,8 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:text="手动控制"
-            android:textColor="@color/black"
-            android:textSize="22sp" />
+            android:textColor="@color/black" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -65,8 +63,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:text="进水电磁阀"
-            android:textColor="@color/black"
-            android:textSize="18sp" />
+            android:textColor="@color/black" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -78,8 +75,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:padding="5dp"
-                android:text="1号"
-                android:textSize="18sp" />
+                android:text="1号" />
 
             <TextView
                 android:id="@+id/tv_js2"
@@ -96,8 +92,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:text="吸肥电磁阀"
-            android:textColor="@color/black"
-            android:textSize="18sp" />
+            android:textColor="@color/black" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -141,8 +136,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:text="灌溉电磁阀"
-            android:textColor="@color/black"
-            android:textSize="18sp" />
+            android:textColor="@color/black" />
 
         <LinearLayout
             android:layout_width="match_parent"
