--- a/SFJ/app/src/main/res/layout/fragment_machine.xml
+++ b/SFJ/app/src/main/res/layout/fragment_machine.xml
@@ -43,6 +43,8 @@
     </android.support.v7.widget.CardView>
 
     <LinearLayout
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -55,8 +57,8 @@
             <RelativeLayout
                 android:layout_centerInParent="true"
                 android:background="@mipmap/icon_circle"
-                android:layout_width="130dp"
-                android:layout_height="130dp">
+                android:layout_width="120dp"
+                android:layout_height="120dp">
 
                 <TextView
                     android:textSize="18sp"
@@ -68,7 +70,7 @@
                     android:layout_height="wrap_content" />
 
                 <TextView
-                    android:textSize="18sp"
+                    android:textSize="22sp"
                     android:textColor="@color/white"
                     android:id="@+id/tv_ec_data"
                     android:layout_centerInParent="true"
@@ -97,8 +99,8 @@
             <RelativeLayout
                 android:layout_centerInParent="true"
                 android:background="@mipmap/icon_circle"
-                android:layout_width="130dp"
-                android:layout_height="130dp">
+                android:layout_width="120dp"
+                android:layout_height="120dp">
 
                 <TextView
                     android:textSize="18sp"
@@ -110,7 +112,7 @@
                     android:layout_height="wrap_content" />
 
                 <TextView
-                    android:textSize="18sp"
+                    android:textSize="22sp"
                     android:textColor="@color/white"
                     android:id="@+id/tv_ph_data"
                     android:layout_centerInParent="true"
@@ -134,6 +136,8 @@
     </LinearLayout>
 
     <LinearLayout
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
         android:layout_marginTop="10dp"
         android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -147,8 +151,8 @@
             <RelativeLayout
                 android:layout_centerInParent="true"
                 android:background="@mipmap/icon_circle"
-                android:layout_width="130dp"
-                android:layout_height="130dp">
+                android:layout_width="120dp"
+                android:layout_height="120dp">
 
                 <TextView
                     android:textSize="16sp"
@@ -160,7 +164,7 @@
                     android:layout_height="wrap_content" />
 
                 <TextView
-                    android:textSize="18sp"
+                    android:textSize="22sp"
                     android:textColor="@color/white"
                     android:id="@+id/tv_ssll_data"
                     android:layout_centerInParent="true"
@@ -189,8 +193,8 @@
             <RelativeLayout
                 android:layout_centerInParent="true"
                 android:background="@mipmap/icon_circle"
-                android:layout_width="130dp"
-                android:layout_height="130dp">
+                android:layout_width="120dp"
+                android:layout_height="120dp">
 
                 <TextView
                     android:textSize="16sp"
@@ -202,7 +206,7 @@
                     android:layout_height="wrap_content" />
 
                 <TextView
-                    android:textSize="18sp"
+                    android:textSize="22sp"
                     android:textColor="@color/white"
                     android:id="@+id/tv_ljll_data"
                     android:layout_centerInParent="true"
@@ -225,6 +229,8 @@
     </LinearLayout>
 
     <LinearLayout
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
         android:layout_marginTop="10dp"
         android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -238,8 +244,8 @@
             <RelativeLayout
                 android:layout_centerInParent="true"
                 android:background="@mipmap/icon_circle"
-                android:layout_width="130dp"
-                android:layout_height="130dp">
+                android:layout_width="120dp"
+                android:layout_height="120dp">
 
                 <TextView
                     android:textSize="16sp"
@@ -251,7 +257,7 @@
                     android:layout_height="wrap_content" />
 
                 <TextView
-                    android:textSize="18sp"
+                    android:textSize="22sp"
                     android:textColor="@color/white"
                     android:id="@+id/tv_gdyl_data"
                     android:layout_centerInParent="true"
@@ -280,8 +286,8 @@
             <RelativeLayout
                 android:layout_centerInParent="true"
                 android:background="@mipmap/icon_circle"
-                android:layout_width="130dp"
-                android:layout_height="130dp">
+                android:layout_width="120dp"
+                android:layout_height="120dp">
 
                 <TextView
                     android:textSize="16sp"
@@ -293,7 +299,7 @@
                     android:layout_height="wrap_content" />
 
                 <TextView
-                    android:textSize="18sp"
+                    android:textSize="22sp"
                     android:textColor="@color/white"
                     android:id="@+id/tv_yw_data"
                     android:layout_centerInParent="true"
