--- a/SFJ/app/src/main/res/layout/fragment_control.xml
+++ b/SFJ/app/src/main/res/layout/fragment_control.xml
@@ -40,20 +40,22 @@
             android:layout_height="wrap_content">
 
             <TextView
+                android:background="@drawable/icon_control_checked"
+                android:gravity="center"
                 android:id="@+id/tv_ggsg"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="70dp"
                 android:layout_marginLeft="20dp"
-                android:padding="5dp"
                 android:text="灌溉水泵"
                 android:textSize="18sp" />
 
             <TextView
+                android:background="@drawable/icon_control_checked"
+                android:gravity="center"
                 android:id="@+id/tv_jssg"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="70dp"
                 android:layout_marginLeft="20dp"
-                android:padding="5dp"
                 android:text="进水水泵"
                 android:textSize="18sp" />
         </LinearLayout>
@@ -162,6 +164,7 @@
                     android:textSize="18sp" />
 
                 <TextView
+                    android:gravity="center"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
@@ -170,6 +173,7 @@
                     android:textSize="18sp" />
 
                 <TextView
+                    android:gravity="center"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
