--- a/SFJ/app/src/main/res/layout/fragment_machine.xml
+++ b/SFJ/app/src/main/res/layout/fragment_machine.xml
@@ -61,18 +61,11 @@
                 android:layout_height="wrap_content">
 
                 <RelativeLayout
+                    android:id="@+id/rl_ec"
                     android:layout_centerInParent="true"
-                    android:background="@mipmap/icon_white_circle"
+                    android:background="@mipmap/icon_white_ec"
                     android:layout_width="120dp"
                     android:layout_height="120dp">
-
-                    <TextView
-                        android:layout_marginTop="15dp"
-                        android:textColor="@color/black"
-                        android:text="EC"
-                        android:layout_centerHorizontal="true"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
 
                     <TextView
                         android:textSize="22sp"
@@ -82,14 +75,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
 
-                    <TextView
-                        android:textColor="@color/black"
-                        android:text="mS/cm"
-                        android:layout_centerHorizontal="true"
-                        android:layout_alignParentBottom="true"
-                        android:layout_marginBottom="10dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
 
                 </RelativeLayout>
 
@@ -101,32 +86,17 @@
                 android:layout_height="wrap_content">
 
                 <RelativeLayout
+                    android:id="@+id/rl_ph"
                     android:layout_centerInParent="true"
-                    android:background="@mipmap/icon_white_circle"
+                    android:background="@mipmap/icon_white_ph"
                     android:layout_width="120dp"
                     android:layout_height="120dp">
-
-                    <TextView
-                        android:layout_marginTop="15dp"
-                        android:textColor="@color/black"
-                        android:text="pH"
-                        android:layout_centerHorizontal="true"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
 
                     <TextView
                         android:textSize="22sp"
                         android:textColor="@color/black"
                         android:id="@+id/tv_ph_data"
                         android:layout_centerInParent="true"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-
-                    <TextView
-                        android:textColor="@color/black"
-                        android:layout_centerHorizontal="true"
-                        android:layout_alignParentBottom="true"
-                        android:layout_marginBottom="10dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
 
@@ -148,33 +118,17 @@
                 android:layout_height="wrap_content">
 
                 <RelativeLayout
+                    android:id="@+id/rl_ssll"
                     android:layout_centerInParent="true"
-                    android:background="@mipmap/icon_white_circle"
+                    android:background="@mipmap/icon_white_ssll"
                     android:layout_width="120dp"
                     android:layout_height="120dp">
-
-                    <TextView
-                        android:layout_marginTop="15dp"
-                        android:textColor="@color/black"
-                        android:text="实时流量"
-                        android:layout_centerHorizontal="true"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
 
                     <TextView
                         android:textSize="22sp"
                         android:textColor="@color/black"
                         android:id="@+id/tv_ssll_data"
                         android:layout_centerInParent="true"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-
-                    <TextView
-                        android:textColor="@color/black"
-                        android:text="m³/h"
-                        android:layout_centerHorizontal="true"
-                        android:layout_alignParentBottom="true"
-                        android:layout_marginBottom="10dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
 
@@ -188,33 +142,17 @@
                 android:layout_height="wrap_content">
 
                 <RelativeLayout
+                    android:id="@+id/rl_ljll"
                     android:layout_centerInParent="true"
-                    android:background="@mipmap/icon_white_circle"
+                    android:background="@mipmap/icon_white_ljll"
                     android:layout_width="120dp"
                     android:layout_height="120dp">
-
-                    <TextView
-                        android:layout_marginTop="15dp"
-                        android:textColor="@color/black"
-                        android:text="累积流量"
-                        android:layout_centerHorizontal="true"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
 
                     <TextView
                         android:textSize="22sp"
                         android:textColor="@color/black"
                         android:id="@+id/tv_ljll_data"
                         android:layout_centerInParent="true"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-
-                    <TextView
-                        android:textColor="@color/black"
-                        android:text="m³/h"
-                        android:layout_centerHorizontal="true"
-                        android:layout_alignParentBottom="true"
-                        android:layout_marginBottom="10dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
 
@@ -237,33 +175,17 @@
                 android:layout_height="wrap_content">
 
                 <RelativeLayout
+                    android:id="@+id/rl_gdyl"
                     android:layout_centerInParent="true"
-                    android:background="@mipmap/icon_white_circle"
+                    android:background="@mipmap/icon_white_gdyl"
                     android:layout_width="120dp"
                     android:layout_height="120dp">
-
-                    <TextView
-                        android:layout_marginTop="15dp"
-                        android:textColor="@color/black"
-                        android:text="管道压力"
-                        android:layout_centerHorizontal="true"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
 
                     <TextView
                         android:textSize="22sp"
                         android:textColor="@color/black"
                         android:id="@+id/tv_gdyl_data"
                         android:layout_centerInParent="true"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-
-                    <TextView
-                        android:textColor="@color/black"
-                        android:text="kPa"
-                        android:layout_centerHorizontal="true"
-                        android:layout_alignParentBottom="true"
-                        android:layout_marginBottom="10dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
 
@@ -277,33 +199,17 @@
                 android:layout_height="wrap_content">
 
                 <RelativeLayout
+                    android:id="@+id/rl_yw"
                     android:layout_centerInParent="true"
-                    android:background="@mipmap/icon_white_circle"
+                    android:background="@mipmap/icon_white_yw"
                     android:layout_width="120dp"
                     android:layout_height="120dp">
-
-                    <TextView
-                        android:layout_marginTop="15dp"
-                        android:textColor="@color/black"
-                        android:text="液位"
-                        android:layout_centerHorizontal="true"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
 
                     <TextView
                         android:textSize="22sp"
                         android:textColor="@color/black"
                         android:id="@+id/tv_yw_data"
                         android:layout_centerInParent="true"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-
-                    <TextView
-                        android:textColor="@color/black"
-                        android:text="cm"
-                        android:layout_centerHorizontal="true"
-                        android:layout_alignParentBottom="true"
-                        android:layout_marginBottom="10dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
 
